[package]
name = "Market_FE"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]